--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "musicard.js",
+  "name": "musicard",
   "version": "1.0.0",
   "main": "build/index.js",
   "typings": "build/index.d.ts",
@@ -7,7 +7,8 @@
     "test": "node example/test"
   },
   "files": [
-    "build"
+    "build",
+    "res"
   ],
   "engines": {
     "node": ">=16"
@@ -26,9 +27,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/A3PIRE/musicard.js.git"
+    "url": "https://github.com/A3PIRE/musicard.git"
   },
   "bugs": {
-    "url": "https://github.com/A3PIRE/musicard.js/issues"
+    "url": "https://github.com/A3PIRE/musicard/issues"
   }
 }
