--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "musicard",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "main": "build/index.js",
   "typings": "build/index.d.ts",
   "scripts": {
@@ -20,10 +20,11 @@
   ],
   "author": "FlameFace",
   "license": "MIT",
-  "description": "Your Discord Bot's Music Made Visual!",
+  "description": "Experience your Discord bot's music in a visual format.",
   "dependencies": {
     "canvas": "^2.11.2",
-    "canvas-constructor": "^7.0.1"
+    "canvas-constructor": "^7.0.1",
+    "color-thief-node": "^1.0.4"
   },
   "repository": {
     "type": "git",
