--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "musicard",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "description": "Experience your Discord bot's music in a visual format.",
   "main": "build/index.js",
   "types": "build/index.d.ts",
@@ -27,9 +27,10 @@
   "author": "FlameFace",
   "license": "MIT",
   "dependencies": {
-    "canvas": "^2.11.2",
+    "@napi-rs/canvas": "^0.1.44",
     "canvas-constructor": "^7.0.1",
-    "color-thief-node": "^1.0.4"
+    "color-thief-node": "^1.0.4",
+    "user-agents": "^1.0.1444"
   },
   "devDependencies": {
     "@types/node": "20.5.0",
