Fixed install bug

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "musicard",
-  "version": "1.3.4",
+  "version": "1.3.5",
   "description": "Experience your Discord bot's music in a visual format.",
   "main": "build/index.js",
   "types": "build/index.d.ts",
@@ -29,8 +29,7 @@
   "dependencies": {
     "@napi-rs/canvas": "^0.1.44",
     "canvas-constructor": "^7.0.1",
-    "color-thief-node": "^1.0.4",
-    "user-agents": "^1.0.1444"
+    "color-thief-node": "^1.0.4"
   },
   "devDependencies": {
     "@types/node": "20.5.0",
