--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "index.js",
     "index.d.ts"
   ],
+  "scripts": {
+    "test": "node examples/index.js"
+  },
   "keywords": [
     "musicard",
     "music-card",
