Update: CODEOWNERS Incorrect tag used for Elitex

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,5 +2,5 @@
 /.github @flameface @unschooledgamer
 
 # src, tests. (/fonts Aren't directly Owned Unburn)
-/src @flameface @unschooledgamer @elitex
+/src @flameface @unschooledgamer @elitex07
 /tests @flameface
