Refactor: theme exports and update progress defaults
- Changed theme exports in index.ts to named exports for better clarity.
- Updated default progress values in Classic, ClassicPro, Dynamic, and Mini, themes to ensure correct calculations.
- Added type annotations for thumbnail variables in theme files for improved type safety.

--- a/biome.json
+++ b/biome.json
@@ -48,7 +48,7 @@
     },
     "files": {
       "ignoreUnknown": true,
-      "ignore": [".vscode", "dist", "node_modules"]
+      "ignore": [".vscode", "dist", "node_modules", "tests"]
     },
     "json": {
       "formatter": {
